# frame-rate

./: .gitignore  README.md  pyproject.toml
src/frame_rate/: __init__.py  __main__.py
